<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_title">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="sharing">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательско соглашение</string>
    <string name="ypURL">https://yandex.ru/legal/practicum_offer/</string>
    <string name="adURL">https://practicum.yandex.com/android-developer/</string>
    <string name="message">Привет, Android-разработка — это круто!</string>
    <string name="mail">klykovskiyt@mail.ru:</string>
    <string name="share_with">Поделиться через:</string>
    <string name="message_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="track_name">Название трека</string>
    <string name="track_author">автор</string>
    <string name="track_duratin">Длительность</string>
    <string name="ItunesURL">https://itunes.apple.com</string>
    <string name="connection_trouble">Проблемы со связью</string>
    <string name="try_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="albom">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="empty_media">Ваша медиатека пуста</string>

    <string name="favourite">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
</resources>