<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/backgroundMain"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/low_margin"
        android:layout_marginVertical="@dimen/low_margin"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/avrg_text_size"
        android:fontFamily="@font/ys_display_medium"
        />

    <Button
        style="@style/button_main_activity"
        android:text="@string/search_title"
        app:icon="@drawable/light_mode"
        android:id="@+id/search"/>

    <Button
        style="@style/button_main_activity"
        android:text="@string/media_library"
        app:icon="@drawable/media"
        android:id="@+id/media"/>

    <Button
        style="@style/button_main_activity"
        android:text="@string/settings"
        app:icon="@drawable/settings_icon"
        android:layout_marginBottom="@dimen/low_margin"
        android:id="@+id/settings"/>

</LinearLayout>