<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.PlaylistMaker"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:background="?attr/colorPrimary"
    tools:context=".presentation.ui.settings.SettingsFragment">
    <TextView
        style = "@style/top_button_sett"
        app:iconGravity = "textStart"
        android:text="@string/settings"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/avrg_text_size"
        android:layout_marginBottom="20dp"
        android:id="@+id/home"
        />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:text="Темная тема"
        style="@style/top_button"
        android:paddingRight="10dp"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
    <com.google.android.material.button.MaterialButton
        style="@style/top_button"
        android:text="@string/sharing"
        app:icon = "@drawable/share"
        android:id="@+id/buttonShare"/>
    <com.google.android.material.button.MaterialButton
       style="@style/top_button"
        android:text="@string/support"
        app:icon = "@drawable/group"
        android:id="@+id/support" />
    <com.google.android.material.button.MaterialButton
        android:text="@string/user_agreement"
        app:icon = "@drawable/arrow"
        style="@style/top_button"
        android:id="@+id/userAgreement"/>

</LinearLayout>