<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:theme="@style/Base.Theme.PlaylistMaker">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorPrimary">
        <Button
        style = "@style/top_button"
        app:iconGravity = "textStart"
        android:text="@string/search_title"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/avrg_text_size"
        app:icon = "@drawable/arrowback"
        app:iconPadding = "@dimen/low_margin"
        android:layout_marginBottom="0dp"
        android:id="@+id/home"
        android:layout_height="56dp"
        app:iconTint="?attr/colorOnPrimary"
        />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/margin_horizontal_activity"
            android:layout_marginVertical="@dimen/margin_vertical_activity"
            app:cardCornerRadius="10dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/mist_gray"
            android:orientation="horizontal"
            android:padding="0dp"
            >
            <EditText
                android:layout_width="match_parent"
                style="@style/search"
                android:id="@+id/search"
                android:imeOptions="actionDone"
                android:singleLine="true"
                />
            <Button
                style="@style/cross_button"
                android:id="@+id/cross"
                android:layout_gravity="end"
                android:visibility="gone"
                />
    </FrameLayout>
    </androidx.cardview.widget.CardView>
        <TextView
            android:visibility="gone"
            android:id="@+id/history_text"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            style="@style/text_error_search"
            android:textSize="19sp"
            android:text="@string/you_were_looking_for"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        <Button
            android:visibility="gone"
            android:id="@+id/clear_history"
            android:layout_width="144dp"
            android:layout_height="40dp"
            style ="@style/update_button"
            android:text="@string/clear_history"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/trouble_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="210dp"
            android:orientation="vertical"
            android:visibility="gone">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            style="@style/place_holder_search_5xx"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="312dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal">
        <TextView
            style="@style/text_error_search"
            android:text="@string/connection_trouble"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            style="@style/text_error_search"
            android:text="@string/try_connection"/>
        </LinearLayout>
            <Button
                android:id="@+id/update"
                style="@style/update_button"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="210dp"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                style="@style/place_holder_search_not_found"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                    style="@style/text_error_search"
                    android:text="@string/not_found"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>