<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="trackCover"
        app:barrierDirection="start" />
    <Button
        app:layout_constraintTop_toTopOf="parent"
        style = "@style/top_button"
        app:iconGravity = "textStart"
        app:icon = "@drawable/arrowback"
        app:iconPadding = "@dimen/low_margin"
        android:layout_marginBottom="0dp"
        android:id="@+id/home"
        android:layout_height="56dp"
        app:iconTint="?attr/colorOnPrimary"
        />

    <ImageView
        android:id="@+id/trackCover"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:src="@drawable/trackplaceholder"
        app:layout_constraintTop_toBottomOf="@+id/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="26dp"/>

    <TextView
        android:layout_marginStart="24dp"
        android:id="@+id/trackName"
        style="@style/text_error_search"
        android:textSize="22sp"
        android:layout_marginTop="24dp"
        tools:text = "Название трека"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackCover"/>

    <TextView
        android:layout_marginStart="24dp"
        android:id="@+id/trackGroup"
        style="@style/text_error_search"
        android:textSize="14sp"
        tools:text="Группа"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:layout_width="51dp"
        android:layout_height="51dp"
        app:layout_constraintTop_toBottomOf="@id/trackGroup"
        app:layout_constraintStart_toEndOf="@id/textsBarrier"
        android:background="@drawable/round_button"
        android:src="@drawable/addlist"
        android:layout_marginTop="54dp"
        android:id="@+id/add_list"
        style="@style/roundButtons"
        />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="83.3dp"
        android:layout_height="83.3dp"
        app:layout_constraintStart_toEndOf="@id/add_list"
        app:layout_constraintTop_toBottomOf="@id/trackGroup"
        android:background="@drawable/pause"
        android:layout_marginTop="38.3dp"
        android:src="@drawable/pause"
        android:layout_marginStart="63.33dp"
        app:tint="?attr/colorOnPrimary"
        />

    <ImageButton
        android:layout_marginStart="63.33dp"
        android:layout_width="51dp"
        android:layout_height="51dp"
        app:layout_constraintTop_toBottomOf="@id/trackGroup"
        app:layout_constraintStart_toEndOf="@id/play"
        android:background="@drawable/round_button"
        android:src="@drawable/heart_no_active"
        android:layout_marginTop="54dp"
        style="@style/roundButtons"
        />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00"
        style="@style/text_error_search"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginTop="12.33dp"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_duration"
        style="@style/track_data"
        android:layout_marginTop="30dp"
        android:text="@string/duration"
        app:layout_constraintTop_toBottomOf="@id/timer"
        />

    <TextView
        android:id="@+id/text_albom"
        style="@style/track_data"
        android:layout_marginTop="18dp"
        android:text="@string/albom"
        app:layout_constraintTop_toBottomOf="@id/text_duration"
        />

    <TextView
        android:id="@+id/text_year"
        style="@style/track_data"
        android:layout_marginTop="18dp"
        android:text="@string/year"
        app:layout_constraintTop_toBottomOf="@id/text_albom"
        />

    <TextView
        android:id="@+id/text_genre"
        style="@style/track_data"
        android:layout_marginTop="18dp"
        android:text="@string/genre"
        app:layout_constraintTop_toBottomOf="@id/text_year"
        />

    <TextView
        android:id="@+id/text_country"
        style="@style/track_data"
        android:layout_marginTop="18dp"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@id/text_genre"
        />

    ///////////////////////

    <TextView
        android:id="@+id/duration"
        style="@style/track_dataM"
        android:layout_marginTop="30dp"
        android:text="@string/duration"
        app:layout_constraintTop_toBottomOf="@id/timer"
        />

    <TextView
        android:id="@+id/albom"
        style="@style/track_dataM"
        android:layout_marginTop="18dp"
        android:text="@string/albom"
        app:layout_constraintTop_toBottomOf="@id/duration"
        />

    <TextView
        android:id="@+id/year"
        style="@style/track_dataM"
        android:layout_marginTop="18dp"
        android:text="@string/year"
        app:layout_constraintTop_toBottomOf="@id/albom"
        />

    <TextView
        android:layout_marginStart="100dp"
        android:id="@+id/genre"
        style="@style/track_dataM"
        android:layout_marginTop="18dp"
        android:text="2"
        app:layout_constraintTop_toBottomOf="@id/year"
        />

    <TextView
        app:layout_constrainedWidth="true"
        android:id="@+id/country"
        style="@style/track_dataM"
        android:layout_marginTop="18dp"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@id/genre"
        />

</androidx.constraintlayout.widget.ConstraintLayout>